add datefilter and domainfilter to deliveries endpoint
